clean and edit ServerUpdateView and ServerForm.html

--- a/DataCenterProject/blogs/templates/index.html
+++ b/DataCenterProject/blogs/templates/index.html
@@ -867,6 +867,7 @@
                                  success: function (response) {
 
                                     $('#serverToolsContent').html(response);
+                                    //location.reload();
 
                                  },
                                 error: function(data) {
