--- a/DataCenterProject/blogs/templates/ServerForm.html
+++ b/DataCenterProject/blogs/templates/ServerForm.html
@@ -1,4 +1,4 @@
 <form method="post" id="form" >{% csrf_token %}
-    {{ form.as_p }}{{test}}{{server}}
+    {{ form.as_p }}
     <input type="submit" value="Submit" id="button" />
 </form>
