--- a/DataCenterProject/blogs/templates/index.html
+++ b/DataCenterProject/blogs/templates/index.html
@@ -30,6 +30,8 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <!--jquery ui -->
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <style>
         .serverDetails{
             margin-bottom :3%;
@@ -48,6 +50,12 @@
             padding: 15px;
             font-size: large;
         }
+     editServer{
+      margin:1%;
+      }
+     //#deleteServer-confirm{
+       // visibility : hidden
+     //}
 
     </style>
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
@@ -158,7 +166,7 @@
                              <a href="#serverTools" class="editServer" id="edit{{server.name}}" data-toggle="modal">
                                  <i class="fa fa-pencil fa-3x"></i>
                              </a>
-                            <a href="#serverTools" class="deleteServer" data-toggle="modal">
+                            <a href="#serverTools" class="deleteServer" id="delete{{server.name}}">
                                  <i class="fa fa-trash fa-3x"></i>
                              </a>
                         </div>
@@ -167,7 +175,16 @@
             </div>
         </div>
     </section>
+    <div id="deleteServer-confirm" title="Delete Server?" >
+      <p><span class="ui-icon ui-icon-alert" style="float:left; margin:12px 12px 20px 0;"></span>This server will be permanently deleted with its related data and cannot be recovered. Are you sure?</p>
+    </div>
 
+    <div id="deleteServer-message" title="Delete complete">
+      <p>
+        <span class="ui-icon ui-icon-circle-check" style="float:left; margin:0 7px 50px 0;"></span>
+        Server deleted successfully.
+      </p>
+    </div>
 
     {% for server in Servers %}
     <div class="server-modal modal fade" id="{{server.name}}modal" tabindex="-1" role="dialog" aria-hidden="true">
@@ -811,6 +828,7 @@
     <script src="{% static 'js/agency.min.js' %}"></script>
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
     <script>
         $('.btnd').click(function () {
             var id = $(this).attr('id');
@@ -877,6 +895,51 @@
                            return false;
                    });
                 }
+            });
+
+        });
+
+
+        $('.deleteServer').click(function () {
+            event.preventDefault();
+            var idText = $(this).attr('id');
+            var id = idText.split('delete')[1];
+            var csrf_token = $("#csrf_token").val();
+            console.log(id);
+            //$( "#deleteServer-confirm" ).attr("visibility" ,"visible");
+            $( "#deleteServer-confirm" ).dialog({
+              resizable: false,
+              height: "auto",
+              width: 400,
+              modal: true,
+              buttons: {
+                "Delete all items": function() {
+                  $( this ).dialog( "close" );
+                  //ajax call to delete
+                  $.ajax({
+                        data: {
+                            csrfmiddlewaretoken: ('{{csrf_token}}'),
+                            id: id,
+                        },
+                        type: 'POST',
+                        url: 'delete/'+id,
+                        success: function (response) {
+                            $('#deleteServer-message').dialog({
+                              modal: true,
+                              buttons: {
+                                Ok: function() {
+                                  $( this ).dialog( "close" );
+                                  location.reload();
+                                }
+                              }
+                            });
+                        }
+                    });
+                },
+                Cancel: function() {
+                  $( this ).dialog( "close" );
+                }
+              }
             });
 
         });
