--- a/DataCenterProject/blogs/templates/index.html
+++ b/DataCenterProject/blogs/templates/index.html
@@ -143,7 +143,7 @@
                         <!--<a class="page-scroll" href="#servers">Servers</a>-->
                     </li>
                     <li>
-                        <a class="page-scroll" href="#server">Servers</a>
+                        <a class="page-scroll" href="#">Servers</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#rack">Racks</a>
@@ -201,7 +201,7 @@
 
     <!-- --------------- Servers ----------------------------------------------------------------------------- -->
     <!-- server Grid Section -->
-    <section id="server" class="bg-light-gray">
+    <section id="" class="bg-light-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -216,7 +216,7 @@
             </div>
             <div class="row">
                 {% for server in Servers %}
-                    <div class="col-md-4 col-sm-6 server-item">
+                    <!--<div class="col-md-4 col-sm-6 server-item">
                         <a href="#{{server.name}}modal" class="server-link" data-toggle="modal">
                             <div class="server-hover">
                                 <div class="server-hover-content">
@@ -236,7 +236,7 @@
                                  <i class="fa fa-trash fa-3x"></i>
                              </a>
                         </div>
-                    </div>
+                    </div>-->
                 {% endfor %}
             </div>
         </div>
@@ -412,15 +412,34 @@
                              <div class="tabsRack">
                               <input type="radio" name="tabs" id="tabone{{RackNum}}" checked="checked">
                               <label for="tabone{{RackNum}}">Servers</label>
-                              <div class="tab row">
+                              <div class="tab row" id="server">
                                   {% for Rack in Racks %}
                                         {% for server in Rack %}
                                             {% if server.RackNum.RackNum ==  RackNum %}
-                                                <div class="col-md-4">
+                                                <!--<div class="col-md-4">
                                                     <button type="button" onclick="showServerDetails('{{server}}')">
                                                         <h6>{{server.name}}</h6>
                                                         <img src="{% static 'img/server.png' %}" width="100%">
                                                     </button>
+                                                </div>-->
+                                                <div class="col-md-4 col-sm-6 server-item">
+                                                    <a href="#{{server.name}}modal" class="server-link" data-toggle="modal">
+                                                        <div class="server-hover">
+                                                            <div class="server-hover-content">
+                                                                <i class="fa fa-server fa-3x"></i>
+                                                            </div>
+                                                        </div>
+                                                        <img src="{% static 'img/server.png' %}" class="img-responsive" alt="">
+                                                    </a>
+                                                    <div class="server-caption">
+                                                        <h4>{{server.name}}</h4>
+                                                         <a href="#serverTools" class="editServer" id="edit{{server.name}}" data-toggle="modal">
+                                                             <i class="fa fa-pencil fa-3x"></i>
+                                                         </a>
+                                                        <a href="#serverTools" class="deleteServer" id="delete{{server.name}}">
+                                                             <i class="fa fa-trash fa-3x"></i>
+                                                         </a>
+                                                    </div>
                                                 </div>
                                             {% endif %}
                                         {% endfor %}
