--- a/DataCenterProject/blogs/templates/index.html
+++ b/DataCenterProject/blogs/templates/index.html
@@ -70,6 +70,7 @@
   #tabs ul li a{background-color:white;color:black}
     #tabs h2{align:center}
 
+
 .tabsRack {
  display: flex;
  flex-wrap: wrap; // make sure it wraps
@@ -207,9 +208,9 @@
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Servers</h2>
                     <h3 class="section-subheading text-muted">We have {{serversCount}} servers.
-                    <a href="#serverTools" class="createServer" id="createServer" data-toggle="modal">
+                    <!--<a href="#serverTools" class="createServer" id="createServer" data-toggle="modal">
                         <i class="fa fa-plus-square fa-2x" aria-hidden="true"></i>
-                    </a>
+                    </a>-->
                     </h3>
 
                 </div>
@@ -413,6 +414,11 @@
                               <input type="radio" name="tabs" id="tabone{{RackNum}}" checked="checked">
                               <label for="tabone{{RackNum}}">Servers</label>
                               <div class="tab row" id="server">
+                                    <h3 class="section-subheading text-muted">Add Server
+                                        <a href="#serverTools" class="createServer" id="createServer" data-toggle="modal">
+                                            <i class="fa fa-plus-square fa-2x" aria-hidden="true"></i>
+                                        </a>
+                                    </h3>
                                   {% for Rack in Racks %}
                                         {% for server in Rack %}
                                             {% if server.RackNum.RackNum ==  RackNum %}
@@ -458,7 +464,7 @@
                               <label for="tabthree{{RackNum}}">Tab Three</label>
                               <div class="tab">
                                 <h1>Tab Three Content</h1>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                                <p>Add Server</p>
                               </div>
                             </div>
 
@@ -1189,7 +1195,6 @@
                                  success: function (response) {
                                     if(response=="Server created successfully.")
                                     {
-                                        alert('done');
                                         $('#serverToolsContent').html(response);
                                     }
                                    /* else
